--- a/pom.xml
+++ b/pom.xml
@@ -17,22 +17,22 @@
     <dependency>
     	<groupId>commons-pool</groupId>
     	<artifactId>commons-pool</artifactId>
-    	<version>1.5.7</version>
+    	<version>1.6</version>
     </dependency>
     <dependency>
     	<groupId>commons-logging</groupId>
     	<artifactId>commons-logging</artifactId>
-    	<version>1.1.1</version>
+    	<version>1.1.3</version>
     </dependency>
     <dependency>
     	<groupId>log4j</groupId>
     	<artifactId>log4j</artifactId>
-    	<version>1.2.16</version>
+    	<version>1.2.17</version>
     </dependency>
     <dependency>
     	<groupId>org.apache.commons</groupId>
     	<artifactId>commons-lang3</artifactId>
-    	<version>3.1</version>
+    	<version>3.3.2</version>
     </dependency>
     <dependency>
     	<groupId>javax.servlet</groupId>
@@ -56,6 +56,11 @@
     	<artifactId>standard</artifactId>
     	<version>1.1.2</version>
     </dependency>
+      <dependency>
+          <groupId>javax.ws.rs</groupId>
+          <artifactId>javax.ws.rs-api</artifactId>
+          <version>2.0</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>cc</finalName>
